--- a/about_me.html
+++ b/about_me.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -83,8 +83,8 @@
                             <br>
 
                             <div class="zal">
-                                <img class="photo-zal1" src="img/diplom1.jpg" alt="персональный тренер Киев 0638587378">
-                                <img class="photo-zal2" src="img/diplom2.jpg" alt="персональный тренер Киев 0638587378">
+                                <img class="photo_gym_one" src="img/diplom1.jpg" alt="персональный тренер Киев 0638587378">
+                                <img class="photo_gym_two" src="img/diplom2.jpg" alt="персональный тренер Киев 0638587378">
                             </div>
 
                             <p> Начал работать личным тренером в 2005м году, сразу после получения диплома НТУУ КПИ «специалист по физической реабилитации». В моей тренерской карьере были перерывы связанные с переездами, травмами и даже профессиональным выгоранием,
