--- a/contacts.html
+++ b/contacts.html
@@ -68,8 +68,8 @@
 
     <div id="content">
         <div class="zal">
-            <img class="photo-zal1" src="img/zal-photo.jpg" alt="персональный тренер Киев 0638587378">
-            <img class="photo-zal2" src="img/zal-photo2.jpg" alt="персональный тренер Киев 0638587378">
+            <img class="photo_gym_one" src="img/zal-photo.jpg" alt="персональный тренер Киев 0638587378">
+            <img class="photo_gym_two" src="img/zal-photo2.jpg" alt="персональный тренер Киев 0638587378">
         </div>
 
         <!-- TODO after before pseudo elements -->
