--- a/men.html
+++ b/men.html
@@ -37,16 +37,16 @@
                             <li><a href="men.html">Мужской тренинг</a></li>
                             <li><a href="women.html">Тренировки для девушек</a></li>
                             <li><a href="pt.home.html">Тренер на дом</a></li>
-                            <li><a href="lose_weight.html">Похудеть</a></li>
+                            <li><a href="lose weight.html">Похудеть</a></li>
                             <li><a href="group">Групповые тренировки</a></li>
                         </ul>
                     </li>
 
                     <li>
-                        <a href="lose_weight.html">Похудеть</a>
+                        <a href="lose weight.html">Похудеть</a>
                     </li>
                     <li>
-                        <a href="about_me.html">О себе</a>
+                        <a href="about me.html">О себе</a>
                     </li>
                     <li>
                         <a href="contacts.html">Контакты</a>
@@ -133,12 +133,12 @@
             </div>
         </div>
     </div>
-    <footer id=" footer ">
+    <footer id="footer">
         <div class="black-block ">
 
-            <nav class="menu_footer ">
+            <nav class="menu footer ">
                 <a href="index.html ">Главная</a>
-                <a href="about_me.html ">О себе</a>
+                <a href="about me.html ">О себе</a>
                 <a href="contacts.html ">Контакты</a>
             </nav>
             <p class="number ">+380638587378</p>
@@ -152,7 +152,7 @@
 
 
 
-            <div class="name ">ARKADIY_GYM</div>
+            <div class="name">ARKADIY_GYM</div>
 
         </div>
         </div>
