--- a/about_me.html
+++ b/about_me.html
@@ -95,9 +95,9 @@
                         </div>
 
                         <div class="zal">
-                            <img class="photo-I_1" src="img/00334003_2.jpg" alt="персональный тренер Киев 0638587378">
-                            <img class="photo-I_2" src="img/crop_78782229_YMyp.jpg" alt="персональный тренер Киев 0638587378">
-                            <img class="photo-I_3" src="img/unnamed 700х700.jpg" alt="персональный тренер Киев 0638587378">
+                            <img class="photo-young" src="img/00334003_2.jpg" alt="персональный тренер Киев 0638587378">
+                            <img class="photo-scene" src="img/crop_78782229_YMyp.jpg" alt="персональный тренер Киев 0638587378">
+                            <img class="photo-waterfall" src="img/unnamed 700х700.jpg" alt="персональный тренер Киев 0638587378">
                         </div>
 
 
