--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 прокладывая путь к результату.
                             </li>
                     </ol>
-                    <br> Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете!
+                    <p> Учтите, занимаясь спортом Вы сохраняете здоровье, молодость, подвижность и внешнюю привлекательность – это те ресурсы которые Вы никогда не сможете купить за деньги, поэтому чем раньше Вы начнете – тем больше выиграете!
                 </p>
 
             </div>
