--- a/lose_weight.html
+++ b/lose_weight.html
@@ -88,10 +88,10 @@
                             <li>1.
                                 <h3>Режим питания</h3>
                                 В правильном питании стоит учитывать "Режим питания" и "Рацион питания".
-                                <ol> -На мой взгляд режим питания важнее.</ol>
-                                <ol> -Если в течении дня Вы недоедаете - то съедите суточную норму вечером или ночью!</ol>
-                                <ol> -Необходимо кушать 5 раз в день с промежутками 3 часа между приемами пищи.</ol>
-                                <ol> -Тело начинает запасать калории в случае нерегулярного питания!</ol>
+                                <li> -На мой взгляд режим питания важнее.</li>
+                                <li> -Если в течении дня Вы недоедаете - то съедите суточную норму вечером или ночью!</li>
+                                <li> -Необходимо кушать 5 раз в день с промежутками 3 часа между приемами пищи.</li>
+                                <li> -Тело начинает запасать калории в случае нерегулярного питания!</li>
                             </li>
 
                             <li>2.
@@ -185,4 +185,4 @@
 
 </body>
 
-</html>
+</html>i
