--- a/lose_weight.html
+++ b/lose_weight.html
@@ -94,50 +94,53 @@
                                 <li> -Тело начинает запасать калории в случае нерегулярного питания!</li>
                             </li>
 
-                            <li>2.
+                            2.
                                 <h3>Рацион питания</h3>
                                 95% подкожного жира появляется от углеводов, а не от жиров. Углеводы бывают быстро усваиваемые и медленно усваиваемые. Необходимо исключить быстроусваиваемые:
-                                <ol>-сахар</ol>
-                                <ol>-мед</ol>
-                                <ol>-сладости</ol>
-                                <ol>-хлеб</ol>
-                                <ol>-быстроусваиваемые сорта риса</ol>
-                                <ol>-виноград, изюм</ol>
-                                <ol>-цытрусовые (кроме грейпфрута - он наоборот сопутствует жиросжиганию)</ol>
-                                <ol>-буряк, морковь, картофель</ol>
-                                <ol>-алкоголь</ol>
-                                <ol>-сливочное, подсолнечное масла</ol>
-                                <ol>-майонез, соусы, сметана</ol>
+                                <ul>
+                                <li>-сахар</li>
+                                <li>-мед</li>
+                                <li>-сладости</li>
+                                <li>-хлеб</li>
+                                <li>-быстроусваиваемые сорта риса</li>
+                                <li>-виноград, изюм</li>
+                                <li>-цытрусовые (кроме грейпфрута - он наоборот сопутствует жиросжиганию)</li>
+                                <li>-буряк, морковь, картофель</li>
+                                <li>-алкоголь</li>
+                                <li>-сливочное, подсолнечное масла</li>
+                                <li>-майонез, соусы, сметана</li>
                                 Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте пуливер чтоб снизить количество
                                 масла.
-                            </li>
+                                </ul>
+                            
                             <br>
                             <h5>Чо же тогда кушать?</h5>
-                            <li>
-                                <ol>рыба, морепродукты</ol>
-                                <ol>мясо не жирное, птица (жир удаляйте)</ol>
-                                <ol>яйца</ol>
-                                <ol>молокопродукты не жирные</ol>
-                                <ol>овощи - капуста, огурцы, зелень, сельдерей (кроме перечисленных в не желательных)</ol>
-                                <ol>грейпфрут</ol>
-                                <ol>в качестве жиров употребляйте рыбий жир и льняное масло</ol>
-                                <ol>пейте много воды, газированной или нет - не важно</ol>
-                            </li>
+                            <ul>
+                                <li>рыба, морепродукты</li>
+                                <li>мясо не жирное, птица (жир удаляйте)</li>
+                                <li>яйца</li>
+                                <li>молокопродукты не жирные</li>
+                                <li>овощи - капуста, огурцы, зелень, сельдерей (кроме перечисленных в не желательных)</li>
+                                <li>грейпфрут</li>
+                                <li>в качестве жиров употребляйте рыбий жир и льняное масло</li>
+                                <li>пейте много воды, газированной или нет - не важно</li>
+                            </ul>
 
-                            <li>3.
+                            3.
                                 <h3>Калорийность</h3>
-                                <ol>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</ol>
-                                <ol>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, поднимаясь выше Вы не похудеете.</ol>
-                                <ol>ромежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.</ol>
+                                <ul>
+                                <li>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</li>
+                                <li>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, поднимаясь выше Вы не похудеете.</li>
+                                <li>ромежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.</li>
                                 Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность. Если Вы будете выполнятять рекомендацию описанную в 3 пункте -
                                 то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат Вы увидите раньше и он Вам понравится больше.<br>
+                                </ul>
 
-
-                                <li>4.
+                                4.
                                     <h3>Двигайтесь!</h3>
-                                    Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощением.</li>
+                                    Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощением.
 
-                        </ul>
+                        
                     </p>
 
                     <div class="video-container">
