--- a/lose_weight.html
+++ b/lose_weight.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 
 <head>
@@ -76,72 +76,73 @@
             <!-- TODO after before pseudo elements -->
 
             <div class="kdb">
+                <h2>Как похудеть?</h2>
 
-                <p>
-                    <h2>Как похудеть?</h2>
-
-                    <p>Методы которые описаны в этой статье действуют и являтся важнейшими, необходимыми шагами для снижения лишнего веса. <br> Не обязательно применять сразу все описанные пункты. Выберите себе сперва один и введите его в свою жизнь так,
-                        чтоб это стало Вашей новой привычкой.
-                    </p>
-                    <p>Похудение - это комплекс мер по изменению образа жизни. <br> Если Вы верите в существование "волшебного средства", приняв которое можно быстро похудеть - Вы заблуждаетесь и собираетесь пойти по ложному пути. <br>
+                <p>Методы которые описаны в этой статье действуют и являтся важнейшими, необходимыми шагами для снижения лишнего веса. <br> Не обязательно применять сразу все описанные пункты. Выберите себе сперва один и введите его в свою жизнь так, чтоб
+                    это стало Вашей новой привычкой.
+                </p>
+                <p>Похудение - это комплекс мер по изменению образа жизни. <br> Если Вы верите в существование "волшебного средства", приняв которое можно быстро похудеть - Вы заблуждаетесь и собираетесь пойти по ложному пути. <br>
+                </p>
+                <ol>
+                    <li>
+                        <h3>Режим питания</h3>
+                        В правильном питании стоит учитывать "Режим питания" и "Рацион питания".
                         <ul>
-                            <li>1.
-                                <h3>Режим питания</h3>
-                                В правильном питании стоит учитывать "Режим питания" и "Рацион питания".
-                                <li> -На мой взгляд режим питания важнее.</li>
-                                <li> -Если в течении дня Вы недоедаете - то съедите суточную норму вечером или ночью!</li>
-                                <li> -Необходимо кушать 5 раз в день с промежутками 3 часа между приемами пищи.</li>
-                                <li> -Тело начинает запасать калории в случае нерегулярного питания!</li>
-                            </li>
+                            <li> -На мой взгляд режим питания важнее.</li>
+                            <li> -Если в течении дня Вы недоедаете - то съедите суточную норму вечером или ночью!</li>
+                            <li> -Необходимо кушать 5 раз в день с промежутками 3 часа между приемами пищи.</li>
+                            <li> -Тело начинает запасать калории в случае нерегулярного питания!</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>Рацион питания</h3>
+                        95% подкожного жира появляется от углеводов, а не от жиров. Углеводы бывают быстро усваиваемые и медленно усваиваемые. Необходимо исключить быстроусваиваемые:
+                        <ul>
+                            <li>-сахар</li>
+                            <li>-мед</li>
+                            <li>-сладости</li>
+                            <li>-хлеб</li>
+                            <li>-быстроусваиваемые сорта риса</li>
+                            <li>-виноград, изюм</li>
+                            <li>-цытрусовые (кроме грейпфрута - он наоборот сопутствует жиросжиганию)</li>
+                            <li>-буряк, морковь, картофель</li>
+                            <li>-алкоголь</li>
+                            <li>-сливочное, подсолнечное масла</li>
+                            <li>-майонез, соусы, сметана</li>
+                            Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте пуливер чтоб снизить количество
+                            масла.
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>Чо же тогда кушать?</h3>
+                        <ul>
+                            <li>рыба, морепродукты</li>
+                            <li>мясо не жирное, птица (жир удаляйте)</li>
+                            <li>яйца</li>
+                            <li>молокопродукты не жирные</li>
+                            <li>овощи - капуста, огурцы, зелень, сельдерей (кроме перечисленных в не желательных)</li>
+                            <li>грейпфрут</li>
+                            <li>в качестве жиров употребляйте рыбий жир и льняное масло</li>
+                            <li>пейте много воды, газированной или нет - не важно</li>
+                        </ul>
+                    </li>
 
-                            2.
-                                <h3>Рацион питания</h3>
-                                95% подкожного жира появляется от углеводов, а не от жиров. Углеводы бывают быстро усваиваемые и медленно усваиваемые. Необходимо исключить быстроусваиваемые:
-                                <ul>
-                                <li>-сахар</li>
-                                <li>-мед</li>
-                                <li>-сладости</li>
-                                <li>-хлеб</li>
-                                <li>-быстроусваиваемые сорта риса</li>
-                                <li>-виноград, изюм</li>
-                                <li>-цытрусовые (кроме грейпфрута - он наоборот сопутствует жиросжиганию)</li>
-                                <li>-буряк, морковь, картофель</li>
-                                <li>-алкоголь</li>
-                                <li>-сливочное, подсолнечное масла</li>
-                                <li>-майонез, соусы, сметана</li>
-                                Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте пуливер чтоб снизить количество
-                                масла.
-                                </ul>
-                            
-                            <br>
-                            <h5>Чо же тогда кушать?</h5>
-                            <ul>
-                                <li>рыба, морепродукты</li>
-                                <li>мясо не жирное, птица (жир удаляйте)</li>
-                                <li>яйца</li>
-                                <li>молокопродукты не жирные</li>
-                                <li>овощи - капуста, огурцы, зелень, сельдерей (кроме перечисленных в не желательных)</li>
-                                <li>грейпфрут</li>
-                                <li>в качестве жиров употребляйте рыбий жир и льняное масло</li>
-                                <li>пейте много воды, газированной или нет - не важно</li>
-                            </ul>
+                    <li>
+                        <h3>Калорийность</h3>
+                        <ul>
+                            <li>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</li>
+                            <li>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, поднимаясь выше Вы не похудеете.</li>
+                            <li>ромежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.</li>
+                            Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность. Если Вы будете выполнятять рекомендацию описанную в 3 пункте -
+                            то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат Вы увидите раньше и он Вам понравится больше.<br>
+                        </ul>
+                    </li>
 
-                            3.
-                                <h3>Калорийность</h3>
-                                <ul>
-                                <li>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</li>
-                                <li>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, поднимаясь выше Вы не похудеете.</li>
-                                <li>ромежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.</li>
-                                Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность. Если Вы будете выполнятять рекомендацию описанную в 3 пункте -
-                                то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат Вы увидите раньше и он Вам понравится больше.<br>
-                                </ul>
+                    <li>
+                        <h3>Двигайтесь!</h3>
+                        Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощением.
+                    </li>
 
-                                4.
-                                    <h3>Двигайтесь!</h3>
-                                    Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощением.
-
-                        
-                    </p>
 
                     <div class="video-container">
                         <embed width="1349" height="480" src="https://www.youtube.com/embed/tSOY8clJIdo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
@@ -157,6 +158,7 @@
 
                     <p>Занимайтесь спортом!<br> Приходите тренироваться.
                     </p>
+                </ol>
             </div>
         </div>
     </div>
