--- a/lose_weight.html
+++ b/lose_weight.html
@@ -145,7 +145,7 @@
 
 
                     <div class="video-container">
-                        <embed width="1349" height="480" src="https://www.youtube.com/embed/tSOY8clJIdo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                        <embed width="1349" height="480" src="https://www.youtube.com/embed/7urbBn5Pgc8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
                     </div>
 
                     <p>Занимаясь спортом Вы забудете о проблеме лишнего веса.<br>
