--- a/lose_weight.html
+++ b/lose_weight.html
@@ -131,8 +131,8 @@
                         <h3>Калорийность</h3>
                         <ul>
                             <li>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</li>
-                            <li>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, поднимаясь выше Вы не похудеете.</li>
-                            ромежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.
+                            <li>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, поднимаясь выше Вы не похудеете.
+                            промежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.
                             Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность. Если Вы будете выполнятять рекомендацию описанную в 3 пункте -
                             то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат Вы увидите раньше и он Вам понравится больше.</li><br>
                         </ul>
