--- a/lose_weight.html
+++ b/lose_weight.html
@@ -109,8 +109,9 @@
                             <li>-алкоголь</li>
                             <li>-сливочное, подсолнечное масла</li>
                             <li>-майонез, соусы, сметана</li>
-                            <li>-Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте пуливер чтоб снизить количество
-                                масла.</li>
+                            <li>-Так же стоит исключить сливочное и подсолнечное масла. Замените эти масла на льняное и рыбий жир. Во время приготовления пищи капните на сковороду несколько капель масла на которм обычно готовите и разотрите, либо используйте
+                                пуливер чтоб снизить количество масла.
+                            </li>
                         </ul>
                     </li>
                     <li>
@@ -131,9 +132,10 @@
                         <h3>Калорийность</h3>
                         <ul>
                             <li>Умножте свой вес в киллограммах на 23. Например, если Вы весите 90кг, то 90х23=2070ккал. Это нижний предел,опускаться ниже которого не стоит.</li>
-                            <li>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, поднимаясь выше Вы не похудеете. Промежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете, а по мере снижения веса периодически необходимо делать новые подсчеты.
-                            Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не сложно подсчитать суточную калорийность. Если Вы будете выполнятять рекомендацию описанную в 3 пункте -
-                            то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат Вы увидите раньше и он Вам понравится больше.</li>
+                            <li>А теперь умножте свой вес на 30. Если брать те же 90кг - то 90х30=2700. 2700 - это максимальный предел, поднимаясь выше Вы не похудеете. Промежуток между 2070 и 2700 - Ваш коридор, придерживаясь которого Вы очень скоро похудеете,
+                                а по мере снижения веса периодически необходимо делать новые подсчеты. Калорийность каждого продукта обычно написана на упаковке. Так же, калорийность каждого ингредиента легко можно найти в интернете. Таким образом не
+                                сложно подсчитать суточную калорийность. Если Вы будете выполнятять рекомендацию описанную в 3 пункте - то можно обойтись даже без ранее описанных пунктов. Правда выполняя все рекомендации результат Вы увидите раньше и
+                                он Вам понравится больше.</li>
                         </ul>
                     </li>
 
@@ -141,24 +143,24 @@
                         <h3>Двигайтесь!</h3>
                         Выполняйте не только кардио нагрузки (ходба, бег, плаванье, велосипед), но и силовые, энергоемкие упражнения с отягощением.
                     </li>
-
-
-                    <div class="video-container">
-                        <embed width="1349" height="480" src="https://www.youtube.com/embed/7urbBn5Pgc8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
-                    </div>
-
-                    <p>Занимаясь спортом Вы забудете о проблеме лишнего веса.<br>
-                        Спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях идут на все что бы решить их, а не бросаются в рюмку или на кусок торта, в целях получить свою
-                        порцию удовольствия. Поймите, если Вам не нравится Ваша жизнь, если Вам не нравится Ваша внешность – это сигнал к действию! Примите вызов и сделайте первый шаг – придите в зал. Научитесь терпеть, просто ждать и верить в результат!
-                        Тело будет сопротивляться, оно привыкло валяться на диване или сидеть в ресторане, но Ваша задача упорно двигаться вперёд! Когда пройдёт первый месяц, Вы увидите свои первые изменения, тело начнёт поддаваться Вашим усилиям и терпению,
-                        это заметят друзья и родные. Когда пройдёт год, Вы просто не будете понимать, как раньше жили без этого, Вы влюбитесь в себя, в свой новый образ и ощущения лёгкости в жизни.</p>
-
-
-                    <p>Не знаете с чего начать?<br> -Воспользуйтесь помощью. <br> Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.</p>
-
-                    <p>Занимайтесь спортом!<br> Приходите тренироваться.
-                    </p>
                 </ol>
+
+
+
+                <div class="video-container">
+                    <embed width="1349" height="480" src="https://www.youtube.com/embed/7urbBn5Pgc8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></embed>
+                </div>
+
+                <p>Занимаясь спортом Вы забудете о проблеме лишнего веса.<br> Спорт - это занятие для целеустремлённых и волевых людей, которые при трудностях идут на все что бы решить их, а не бросаются в рюмку или на кусок торта, в целях получить свою
+                    порцию удовольствия. Поймите, если Вам не нравится Ваша жизнь, если Вам не нравится Ваша внешность – это сигнал к действию! Примите вызов и сделайте первый шаг – придите в зал. Научитесь терпеть, просто ждать и верить в результат!
+                    Тело будет сопротивляться, оно привыкло валяться на диване или сидеть в ресторане, но Ваша задача упорно двигаться вперёд! Когда пройдёт первый месяц, Вы увидите свои первые изменения, тело начнёт поддаваться Вашим усилиям и терпению,
+                    это заметят друзья и родные. Когда пройдёт год, Вы просто не будете понимать, как раньше жили без этого, Вы влюбитесь в себя, в свой новый образ и ощущения лёгкости в жизни.</p>
+
+
+                <p>Не знаете с чего начать?<br> -Воспользуйтесь помощью. <br> Тренер поможет безопасно втянуться в режим, последовательно увеличивая нагрузки, с учётом Ваших индивидуальных особенностей и доведёт до конечного результата.</p>
+
+                <p>Занимайтесь спортом!<br> Приходите тренироваться.
+                </p>
             </div>
         </div>
     </div>
