--- a/women.html
+++ b/women.html
@@ -79,10 +79,11 @@
 
             <div class="kdb">
 
-                <p>
-                    <h1>Женский тренинг</h1>
+                <h1>Женский тренинг</h1>
 
-                    <h2>Зачем девушкам силовые тренировки?</h2>
+                <h2>Зачем девушкам силовые тренировки?</h2>
+
+                <p>
                     Девушки в результате тренировок хотят стать стройными и подтянутыми. Основной акцент в тренинге обычно делается на мускулатуру ног, ягодиц, уменьшение талии и создание красивого, женственного телосложения. К тому же и женский организм сильно отличается
                     от мужского. Все эти факторы необходимо учитывать в построении тренировочной программы чтоб тренировки были эффективными, а не вредили самочувствию.
                 </p>
@@ -90,13 +91,15 @@
 
                 <img class="photo-home-train" src="img/w.jpg" alt="персональный тренер Киев 0638587378">
                 <p> Чаще всего, женщины более выносливые, и времени на восстановление им нужно меньше, но настроение и работоспособность сильно меняется в течении месяца. Составляя тренировочный план, нужно отталкиваться и от этого аспекта тоже. <br> Учтите,
-                    фитнес и здоровый образ жизни – это не только зал, это еще и все остальное время до и после тренировки.<br> Многие девушки предпочитают работать, в основном, с тренажерами, пренебрегая свободными весами. А зря, ведь силовая тренировка
-                    с отягощениями сделает для Вашего тела намного больше.<br> Я считаю, что успеха достигнет лишь тот кто сделает свой путь достаточно увлекательным, чтобы итти по нему бесконечно долго. Тренировки дожны быть в радость!<br>
-                    <br> При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться Вам самим, не говоря уже о мужчинах.
+                    фитнес и здоровый образ жизни – это не только зал, это еще и все остальное время до и после тренировки.</p>
+                <p> Многие девушки предпочитают работать, в основном, с тренажерами, пренебрегая свободными весами. А зря, ведь силовая тренировка с отягощениями сделает для Вашего тела намного больше.</p>
+                <p>Я считаю, что успеха достигнет лишь тот кто сделает свой путь достаточно увлекательным, чтобы итти по нему бесконечно долго. Тренировки дожны быть в радость!<br>
                 </p>
-                <p>
-                    <h3>Чем я могу быть Вам полезен?</h3>
+                <p>При регулярном, правильном тренинге уже через пару месяцев Ваше тело будет очень нравиться Вам самим, не говоря уже о мужчинах.
+                </p>
+                <h3>Чем я могу быть Вам полезен?</h3>
 
+                <p>
                     <ul>
                         <li>-Комплексное построение фигуры. Сделаем фигуру такой как Вы хотие! </li>
                         <li>-Учет особенностей женского организма</li>
@@ -109,8 +112,9 @@
                 </p>
                 <p> Условия тренировок и посещения зала см. на стр </p>
                 <a href="contacts.html">Контакты</a><br>
-                <p> Возможно тренироваться и получать результат в домашних условиях. <a href="pt.home.html">Тренер на дом</a>
+                <p> Возможно тренироваться и получать результат в домашних условиях.
                 </p>
+                <a href="pt.home.html">Тренер на дом</a>
             </div>
         </div>
     </div>
