--- a/women.html
+++ b/women.html
@@ -111,7 +111,7 @@
                     </ul>
                 </p>
                 <p> Условия тренировок и посещения зала см. на стр </p>
-                <a href="contacts.html">Контакты</a><br>
+                <a href="contacts.html">Контакты</a>
                 <p> Возможно тренироваться и получать результат в домашних условиях.
                 </p>
                 <a href="pt.home.html">Тренер на дом</a>
