--- a/women.html
+++ b/women.html
@@ -110,11 +110,8 @@
                         <li>-Реабилитационный тренинг при травмах суставов или позвоночника</li>
                     </ul>
                 </p>
-                <p> Условия тренировок и посещения зала см. на стр </p>
-                <a href="contacts.html">Контакты</a>
-                <p> Возможно тренироваться и получать результат в домашних условиях.
-                </p>
-                <a href="pt.home.html">Тренер на дом</a>
+                <p> Условия тренировок и посещения зала см. на стр </p><a href="contacts.html">Контакты</a>
+                <p> Возможно тренироваться и получать результат в домашних условиях.</p><a href="pt.home.html">Тренер на дом</a>
             </div>
         </div>
     </div>
