--- a/men.html
+++ b/men.html
@@ -43,10 +43,10 @@
                     </li>
 
                     <li>
-                        <a href="lose weight.html">Похудеть</a>
+                        <a href="lose_weight.html">Похудеть</a>
                     </li>
                     <li>
-                        <a href="about me.html">О себе</a>
+                        <a href="about_me.html">О себе</a>
                     </li>
                     <li>
                         <a href="contacts.html">Контакты</a>
@@ -93,9 +93,7 @@
                     <ul>
                         <li>А Вы уже знаете себя?</li>
                         <li>Кто Вы? </li>
-                        <li>Что за сущность живет внутри Вас? </li>
-                        <li>Как она будет вести себя в стрессовой ситуации? </li>
-
+                       
                     </ul>
                 </p>
 
@@ -136,17 +134,17 @@
     <footer id="footer">
         <div class="black-block ">
 
-            <nav class="menu footer ">
+            <nav class="menu_footer ">
                 <a href="index.html ">Главная</a>
-                <a href="about me.html ">О себе</a>
+                <a href="about_me.html ">О себе</a>
                 <a href="contacts.html ">Контакты</a>
             </nav>
-            <p class="number ">+380638587378</p>
+            <p class="number">+380638587378</p>
 
 
 
             <a href="tel:+380638587378 ">
-                <img class="tel " src="icons/button-telephone-icon.png " alt="+380638587378 ">
+                <img class="tel " src="icons/button-telephone-icon.png" alt="+380638587378 ">
             </a>
 
 
@@ -155,8 +153,7 @@
             <div class="name">ARKADIY_GYM</div>
 
         </div>
-        </div>
-
+        
     </footer>
 </body>
 
